solved issue with hidden / locked scrollbar when enlarging screen size on burger menu by setting media screen max-width at 991px in App.css (the point where navbar collects into burger menu)

--- a/src/App.css
+++ b/src/App.css
@@ -105,11 +105,14 @@ p.danger {
   border: 1.5px solid #ff0000 !important;
 }
 
-.scrollLocked {
-  position: fixed;
-  right: 0;
-  left: 0;
+@media (max-width:991px) {
+	.scrollLocked {
+    position: fixed;
+    right: 0;
+    left: 0;
+  }
 }
+
 
 /* .error-icon {
   display: none;
